--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "start": "cross-env NODE_ENV=production node dist/index.js",
     "check": "tsc",
     "db:push": "drizzle-kit push",
-    "predeploy": "npm run build && copy dist\\public\\index.html dist\\public\\404.html",
+    // CRITICAL FIX: Running build, then copying index.html to 404.html using the 'cp' command
+    "predeploy": "npm run build && cp dist/public/index.html dist/public/404.html",
     "deploy": "gh-pages -d dist/public"
   },
   "dependencies": {
