--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "start": "cross-env NODE_ENV=production node dist/index.js",
     "check": "tsc",
     "db:push": "drizzle-kit push",
-    "db:pull": "drizzle-kit pull",
-    "predeploy": "npm run build && cp dist/public/index.html dist/public/404.html",
+    "predeploy": "npm run build && npx copyfiles dist/public/index.html dist/public/404.html",
     "deploy": "gh-pages -d dist/public"
   },
   "dependencies": {
@@ -60,7 +59,7 @@
     "framer-motion": "^11.13.1",
     "input-otp": "^1.4.2",
     "leaflet": "^1.9.4",
-    "lucide-react": "^0.453.0",
+    "lucide-react": "^0.453s.0",
     "memorystore": "^1.6.7",
     "next-themes": "^0.4.6",
     "passport": "^0.7.0",
@@ -107,7 +106,8 @@
     "tailwindcss": "^3.4.17",
     "tsx": "^4.20.5",
     "typescript": "5.6.3",
-    "vite": "^7.2.2"
+    "vite": "^7.2.2",
+    "copyfiles": "^2.4.1" 
   },
   "optionalDependencies": {
     "bufferutil": "^4.0.8"
