--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "check": "tsc",
     "db:push": "drizzle-kit push",
     "predeploy": "npm run build && npx copyfiles dist/public/index.html dist/public/404.html",
-    "deploy": "gh-pages -d dist/public --dotfiles --exclude \"README.md\""
+    "deploy": "gh-pages -d dist/public"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
